--- a/styles/dashboard.less
+++ b/styles/dashboard.less
@@ -239,21 +239,21 @@ color: black;
 
  .dash-table-col1{
   text-align: left;
-  width: 20%;
+  width: 25%;
   margin: 0;
   padding: 0;
  }
 
 .dash-table-col2{
   text-align: left;
-  width: 20%;
+  width: 30%;
   margin: 0;
   padding: 0;
 }
 
 .dash-table-col3{
   text-align: left;
-  width: 20%;
+  width: 25%;
   margin: 0;
   padding: 0;
 }
@@ -274,7 +274,7 @@ color: black;
 
 .dash-table-col6{
   text-align: left;
-  width: 20%;
+  width: 15%;
   margin: 0;
   padding: 0;
 }
